tests/fixtures/errors/duplicate_pk.norm
:root
:data
x
@1

:items
pk,name
1,alpha

:more
pk,name
1,beta
